# mendix-doc-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
deploy/: Dockerfile  task-definition.json
scripts/: index.py  serve.py
src/indexer/: builder.py  clone.py  parser.py
src/search/: engine.py  models.py
src/server/: __main__.py  tools.py
tests/: test_parser.py  test_search.py  test_tools.py
